crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@349.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"2017-03-10 12:34:56+3:10\"', '$.datetime().type()');"
---
SelectStmt@0..77
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..75
    FuncCall@7..75
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..52
        Sconst@24..52 "'\"2017-03-10 12:34:56 ..."
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..75
        Sconst@54..75 "'$.datetime().type()'"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

