crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@352.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"2017-03-10t12:34:56+3:10\"', '$.datetime()');"
---
SelectStmt@0..70
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..68
    FuncCall@7..68
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..52
        Sconst@24..52 "'\"2017-03-10t12:34:56 ..."
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..68
        Sconst@54..68 "'$.datetime()'"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

