crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@354.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34:56\"', '$.datetime()');"
---
SelectStmt@0..54
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..52
    FuncCall@7..52
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..36
        Sconst@24..36 "'\"12:34:56\"'"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..52
        Sconst@38..52 "'$.datetime()'"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

