crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@355.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34:56+3\"', '$.datetime().type()');"
---
SelectStmt@0..63
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..61
    FuncCall@7..61
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..38
        Sconst@24..38 "'\"12:34:56+3\"'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..61
        Sconst@40..61 "'$.datetime().type()'"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

