crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@356.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34:56+3\"', '$.datetime()');"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..54
    FuncCall@7..54
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..38
        Sconst@24..38 "'\"12:34:56+3\"'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..54
        Sconst@40..54 "'$.datetime()'"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

