crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@358.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34:56+3:10\"', '$.datetime()');"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..57
    FuncCall@7..57
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..41
        Sconst@24..41 "'\"12:34:56+3:10\"'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..57
        Sconst@43..57 "'$.datetime()'"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

